Fix queries truncated

--- a/frontend/pages/queries/ManageQueriesPage/_styles.scss
+++ b/frontend/pages/queries/ManageQueriesPage/_styles.scss
@@ -131,6 +131,14 @@
           .name__cell {
             max-width: $col-lg;
           }
+
+          @media (max-width: $break-990) {
+            .name__cell {
+              .w400 {
+                max-width: calc(400px - 81px);
+              }
+            }
+          }
           .platforms__cell {
             max-width: $col-md;
           }
